fixed spacing in upcominglist

--- a/src/styles/UpcomingListStyle.sass
+++ b/src/styles/UpcomingListStyle.sass
@@ -43,5 +43,3 @@ $SwitchToMobileWidth: 1120px
           font-size: 14px
           max-height: 147px
           overflow: hidden
-          br
-            display: none
